Fix selection component dark mode

--- a/src/core/select/select.module.scss
+++ b/src/core/select/select.module.scss
@@ -5,11 +5,73 @@ $wrapperSpacing: $spacing * 2;
 $iconSpacing: $spacing;
 
 .menu {
+  --bs-dropdown-color: var(--bs-body-color);
+  --bs-dropdown-bg: var(--bs-body-bg);
+  --bs-dropdown-border-color: var(--bs-border-color-translucent);
+  --bs-dropdown-border-radius: var(--bs-border-radius);
+  --bs-dropdown-border-width: var(--bs-border-width);
+  --bs-dropdown-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  --bs-dropdown-link-color: var(--bs-body-color);
+  --bs-dropdown-link-hover-color: var(--bs-body-color);
+  --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
+  --bs-dropdown-link-active-color: #fff;
+  --bs-dropdown-link-active-bg: #0d6efd;
+}
+
+.menu {
   margin-top: 4px !important;
+  box-shadow: var(--bs-dropdown-box-shadow) !important;
+  border: var(--bs-dropdown-border-width) solid var(--bs-dropdown-border-color) !important;
+  border-radius: var(--bs-dropdown-border-radius) !important;
+  background-color: var(--bs-body-bg) !important;
+}
+
+.menuList {
+  background-color: var(--bs-body-bg) !important;
+  border-radius: var(--bs-dropdown-border-radius) !important;
+}
+
+.option {
+  color: var(--bs-dropdown-link-color) !important;
+  background-color: transparent !important;
+}
+
+.optionFocus,
+.option:focus,
+.option:hover {
+  color: var(--bs-dropdown-link-hover-color) !important;
+  background-color: var(--bs-dropdown-link-hover-bg) !important;
+}
+
+.option:active {
+  color: var(--bs-dropdown-link-active-color) !important;
+  background-color: var(--bs-dropdown-link-active-bg) !important;
+}
+
+.input {
+  color: var(--bs-body) !important;
 }
 
 .control {
+  background-color: var(--bs-body-bg) !important;
   border-color: var(--bs-border-color) !important;
+  color: var(--bs-body-color) !important;
+}
+
+.multiValue {
+  background-color: var(--bs-secondary-bg) !important;
+}
+
+.multiValue,
+.singleValue {
+  &,
+  > * {
+    color: var(--bs-body-color) !important;
+  }
+}
+
+.multiValue [role="button"]:hover {
+  background-color: rgba(var(--bs-danger-rgb), 0.15);
 }
 
 .placeholder {
